# website

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  MIGRATION_PROMPT.md  README.md  components.json  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  sanity.cli.ts  sanity.config.ts  tsconfig.typecheck.json  vitest.config.ts
.claude/: settings.local.json
.claude/commands/: merge-and-close-and-test.md  merge-and-close.md  open-and-watch.md
.github/workflows/: _gates.yml  deploy.yml  pr.yml  teardown.yml
docs/milestones/: M1-authenticated-resume-downloads.md  M1-resume-build-artifact.md
infrastructure/: .gitignore  MANUAL_TEST_PLAN.md  MIGRATION_RUNBOOK.md  Pulumi.prod.yaml  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json  tsconfig.json
infrastructure/lambdas/contact/: Cargo.toml  README.md
infrastructure/lambdas/contact/src/: config.rs  email.rs  handler.rs  lib.rs  main.rs  turnstile.rs  validation.rs
infrastructure/lambdas/contact/templates/: auto-reply.html  notification.html
infrastructure/src/: auth.ts  config.ts  contact-api.ts  dns.ts  static-site.ts
infrastructure/templates/: auto-reply.html  notification.html
scripts/: seed-sanity.mjs  set-gitlab-vars.ps1
scripts/resume/: build.ts  render-docx.test.ts  render-docx.ts  render-pdf.test.ts  render-pdf.ts  template.test.ts  template.ts
src/app/: globals.css  layout.tsx  page.tsx
src/config/: cognito.ts  site.ts
src/lib/: contact-validation.test.ts  contact-validation.ts  experience-data.test.ts  experience-data.ts  projects-data.test.ts  (+15 more)
(+46 files in other folders)
